# KyrsovaySVP

./: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  note.cpp  note.hpp
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  notemanager.cpp  notemanager.hpp
tests/: CMakeLists.txt
tests/note_test_src/: main.cpp  note_test.cpp  note_test.hpp
tests/notemanager_test_src/: main.cpp  notemanager_test.cpp  notemanager_test.hpp
